introduction of the new interpolation representaion

--- a/diatomic_ENSCAN.ipynb
+++ b/diatomic_ENSCAN.ipynb
@@ -294,25 +294,25 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "plt.suptitle(PATH_name+\" cos(tehta) R enat. vs ph. en. @ el. en. 25 steps \"+EN[EN_opt]+\" eV\")\n",
-    "cs1=ax1.contourf(Ren[1:],ctheta,RcthetaEN_R_norm[1:].T, cmap=cmap_temp, levels=15)\n",
+    "plt.suptitle(PATH_name+\" cos(\\u03D1) R enat. vs ph. en. @ el. en. 25 steps \"+EN[EN_opt]+\" eV\")\n",
+    "cs1,ax1=fugi.plot_interpolation(Ren[1:],ctheta,RcthetaEN_R_norm[1:].reshape(len(Ren[1:]),-1).T, ax=ax1, cmap=cmap_temp)\n",
     "ax1.set_title(\"CR pol.\")\n",
     "ax1.set_xlabel('photon en [eV]')\n",
-    "ax1.set_ylabel('cos(theta) [adm]')\n",
+    "ax1.set_ylabel('cos(\\u03D1) [adm]')\n",
     "# ax1.set_aspect(aspect)\n",
     "cbar1=fig.colorbar(cs1, shrink=0.9, ax=ax1)\n",
-    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "cbar1.set_ticks([RcthetaEN_R_norm[1:].min(),RcthetaEN_R_norm[1:].max()])\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "\n",
-    "cs2=ax2.contourf(Ren[1:],ctheta,RcthetaEN_L_norm[1:].T, cmap=cmap_temp, levels=15)\n",
+    "cs2,ax2=fugi.plot_interpolation(Ren[1:],ctheta,RcthetaEN_L_norm[1:].reshape(len(Ren[1:]),-1).T, ax=ax2, cmap=cmap_temp)\n",
     "ax2.set_title(\"CL pol.\")\n",
     "ax2.set_xlabel('ph. ennergy [eV]')\n",
-    "ax2.set_ylabel('cos(theta) [adm]')\n",
+    "ax2.set_ylabel('cos(\\u03D1) [adm]')\n",
     "# ax2.set_aspect(aspect)\n",
     "cbar2=fig.colorbar(cs2, shrink=0.9, ax=ax2)\n",
-    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.set_ticks([RcthetaEN_L_norm[1:].min(),RcthetaEN_L_norm[1:].max()])\n",
+    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_cos(theta)_R_CR-CL.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
@@ -325,25 +325,26 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "plt.suptitle(PATH_name+\" cos(tehta) S enat. vs ph. en. @ el. en. 35 steps \"+EN[EN_opt]+\" eV\")\n",
-    "cs1=ax1.contourf(Sen[1:],ctheta,ScthetaEN_R_norm[1:].T, cmap=cmap_temp, levels=15)\n",
+    "plt.suptitle(PATH_name+\" cos(\\u03D1) S enat. vs ph. en. @ el. en. 35 steps \"+EN[EN_opt]+\" eV\")\n",
+    "cs1,ax1=fugi.plot_interpolation(Sen[1:],ctheta,ScthetaEN_R_norm[1:].reshape(len(Sen[1:]),-1).T, ax=ax1, cmap=cmap_temp)\n",
+    "\n",
     "ax1.set_title(\"CR pol.\")\n",
     "ax1.set_xlabel('photon en [eV]')\n",
-    "ax1.set_ylabel('cos(theta) [adm]')\n",
+    "ax1.set_ylabel('cos(\\u03D1) [adm]')\n",
     "# ax1.set_aspect(aspect)\n",
     "cbar1=fig.colorbar(cs1, shrink=0.9, ax=ax1)\n",
-    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "cbar1.set_ticks([ScthetaEN_R_norm[1:].min(),ScthetaEN_R_norm[1:].max()])\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "\n",
-    "cs2=ax2.contourf(Sen[1:],ctheta,ScthetaEN_L_norm[1:].T, cmap=cmap_temp, levels=15)\n",
+    "cs2,ax2=fugi.plot_interpolation(Sen[1:],ctheta,ScthetaEN_L_norm[1:].reshape(len(Sen[1:]),-1).T, ax=ax2, cmap=cmap_temp)\n",
     "ax2.set_title(\"CL pol.\")\n",
     "ax2.set_xlabel('ph. ennergy [eV]')\n",
-    "ax2.set_ylabel('cos(theta) [adm]')\n",
+    "ax2.set_ylabel('cos(\\u03D1) [adm]')\n",
     "# ax2.set_aspect(aspect)\n",
     "cbar2=fig.colorbar(cs2, shrink=0.9, ax=ax2)\n",
-    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.set_ticks([ScthetaEN_L_norm[1:].min(),ScthetaEN_L_norm[1:].max()])\n",
+    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_cos(theta)_S_CR-CL.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
@@ -356,14 +357,15 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(Ren[1:],ctheta,RcPECD_en.T, cmap=cmap_temp, levels=10)\n",
+    "cs,ax=fugi.plot_interpolation(Ren[1:],ctheta,RcPECD_en[1:].reshape(len(Ren[1:]),-1).T*100, ax=ax, cmap=cmap_temp)\n",
+    "\n",
     "ax.set_title(PATH_name+\" PECD CR-CL \\n R enan. vs ph. en. @ \"+EN[EN_opt]+\" eV\")\n",
     "# aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('photon en [eV]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([cPECD_en.min(),cPECD_en.max()])\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "# ax.set_aspect(aspect)\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_PECDmap_R.png\", dpi=144, transparent=False)\n"
@@ -376,14 +378,15 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(Sen[1:],ctheta,ScPECD_en[1:].T, cmap=cmap_temp, levels=10)\n",
+    "cs,ax=fugi.plot_interpolation(Sen[1:],ctheta,ScPECD_en[1:].reshape(len(Sen[1:]),-1).T*100, ax=ax, cmap=cmap_temp)\n",
+    "\n",
     "ax.set_title(PATH_name+\" PECD CR-CL \\n S enan. vs ph. en. @ \"+EN[EN_opt]+\" eV\")\n",
     "# aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('photon en [eV]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([cPECD_en.min(),cPECD_en.max()])\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "# ax.set_aspect(aspect)\n",
     "\n",
@@ -582,11 +585,12 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(cbeta,cthetaM,fugi.smoothgauss(RPECD_Auger_533.T,0.3,0.3), cmap=cmap_temp, levels=10)\n",
+    "cs,ax=fugi.plot_interpolation(cbeta,cthetaM,RPECD_Auger_533.reshape(len(cbeta),-1).T, ax=ax, cmap=cmap_temp)\n",
+    "\n",
     "ax.set_title(PATH_name+\" PECD map CR-CL \\n R ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "aspect=(cbeta.max()/cthetaM.max())\n",
     "ax.set_xlabel('cos(beta) [adm]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "ax.set_aspect(aspect)\n",
@@ -612,8 +616,8 @@
     "\n",
     "m=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit_cos(x_data,y_data,y_err,m,ax,custom_xlim)\n",
-    "ax.set_title(PATH_name+\" cos(theta)_CR \\n R enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_title(PATH_name+\" cos(\\u03D1)_CR \\n R enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "ax.set_ylabel('counts')\n",
     "\n",
     "fit_info = []\n",
@@ -649,8 +653,8 @@
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
     "ax.set_title(PATH_name+\" PECD CR-CL \\n R enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
-    "ax.set_ylabel('PECD %')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('PECD')\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
@@ -672,11 +676,12 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(cbeta,cthetaM,fugi.smoothgauss(RPECD_Auger_534.T,0.3,0.3), cmap=cmap_temp, levels=10)\n",
+    "cs,ax=fugi.plot_interpolation(cbeta,cthetaM,RPECD_Auger_534.reshape(len(cbeta),-1).T*100, ax=ax, cmap=cmap_temp)\n",
+    "\n",
     "ax.set_title(PATH_name+\" PECD map CR-CL \\n R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "aspect=(cbeta.max()/cthetaM.max())\n",
     "ax.set_xlabel('cos(beta) [adm]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "ax.set_aspect(aspect)\n",
@@ -703,8 +708,8 @@
     "\n",
     "m=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit_cos(x_data,y_data,y_err,m,ax,custom_xlim)\n",
-    "ax.set_title(PATH_name+\" cos(theta)_CR \\n R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_title(PATH_name+\" cos(\\u03D1)_CR \\n R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "ax.set_ylabel('normalised counts')\n",
     "\n",
     "fit_info = []\n",
@@ -740,8 +745,8 @@
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
     "ax.set_title(PATH_name+\" PECD CR-CL \\n R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
-    "ax.set_ylabel('PECD %')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('PECD')\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
@@ -776,8 +781,8 @@
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
     "ax.set_title(PATH_name+\" PECD R-S \\n ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
-    "ax.set_ylabel('PECD %')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('PECD')\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
@@ -812,8 +817,8 @@
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
     "ax.set_title(PATH_name+\" PECD R-S \\n ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
-    "ax.set_ylabel('PECD %')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('PECD')\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
