fixed the error description added selection of graphs titles according to the input

--- a/diatomic_ALLCH.ipynb
+++ b/diatomic_ALLCH.ipynb
@@ -110,15 +110,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define cos(theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#theory curves:\n",
     "# R 500-4.50 random : *cos(x/180*3.1415926)/(1-1.124/2*(3*cos(x/180*3.1415926)*cos(x/180*3.1415926)-1)/2)"
    ]
@@ -132,55 +123,55 @@
     "if CH==\"ALL_CH\":\n",
     "    print(\"ok ALL\")\n",
     "    #NOTE ALL doesn´t have a polarization plane cos(theta) becuase CH9 And CH11 are three bodies breakups\n",
-    "\n",
     "    a=16 #select resolution of the imported graph for the ALL comnbined.\n",
-    "    MFPAD_RCR_all,MFPAD_RCR_en_all,ctheta_RCR_all,ctheta_RCR_err_all,PECD_axis,ctheta_axis,ctheta_axis_red=fugi.import_PECD3D(fileRCR, loc, a=a,  full=True)\n",
-    "    MFPAD_RCL_all,MFPAD_RCL_en_all,ctheta_RCL_all,ctheta_RCL_err_all=fugi.import_PECD3D(fileRCL, loc, a=a)\n",
     "\n",
-    "    if fileSCL and fileSCR is not None:    \n",
-    "        MFPAD_SCR_all,MFPAD_SCR_en_all,ctheta_SCR_all,ctheta_SCR_err_all=fugi.import_PECD3D(fileSCR, loc, a=a)\n",
-    "        MFPAD_SCL_all,MFPAD_SCL_en_all,ctheta_SCL_all,ctheta_SCL_err_all=fugi.import_PECD3D(fileSCL, loc, a=a)\n",
+    "    MFPAD_RCR_all,MFPAD_RCR_en_all,ctheta_RCR_all,ctheta_RCR_err_all,PECD_axis,ctheta_axis,ctheta_axis_red=fugi.import_PECD3D(fileRCR, loc, a=a,  full=True)\n",
+    "    MFPAD_RCL_all,MFPAD_RCL_en_all,ctheta_RCL_all,ctheta_RCL_err_all=fugi.import_PECD3D(fileRCL, loc, a=a)   \n",
     "\n",
     "    #normalise before ANY PECD\n",
+    "    MFPAD_RCR_all_norm=fugi.normalise_with_err(MFPAD_RCR_all)\n",
+    "    MFPAD_RCL_all_norm=fugi.normalise_with_err(MFPAD_RCL_all)\n",
     "    ctheta_RCR_all_norm, ctheta_RCR_err_all_norm=fugi.normalise_with_err(ctheta_RCR_all,ctheta_RCR_err_all)\n",
     "    ctheta_RCL_all_norm, ctheta_RCL_err_all_norm=fugi.normalise_with_err(ctheta_RCL_all,ctheta_RCL_err_all)\n",
     "    \n",
     "    #Combining the two polarizations: single intesity fit\n",
-    "    ctheta_R_all=np.add(ctheta_RCR_all_norm,np.flip(ctheta_RCL_all_norm))\n",
-    "    ctheta_R_all_err=np.sqrt(ctheta_RCR_err_all_norm**2+np.flip(ctheta_RCL_err_all_norm)**2) #SUM PROPAGATION\n",
-    "    # ctheta_R_all=np.add(ctheta_RCR_all_norm,ctheta_RCL_all_norm)\n",
-    "    # ctheta_R_all_err=np.sqrt(ctheta_RCR_err_all_norm**2+ctheta_RCL_err_all_norm**2) #SUM PROPAGATION\n",
+    "    ctheta_R_all=np.add(ctheta_RCR_all,np.flip(ctheta_RCL_all))\n",
+    "    ctheta_R_all_norm=np.add(ctheta_RCR_all_norm,np.flip(ctheta_RCL_all_norm))\n",
+    "    ctheta_R_all_err=fugi.error_calc(ctheta_RCR_err_all,np.flip(ctheta_RCL_err_all)) #SUM PROPAGATION\n",
     "    \n",
     "    #PECD between two diffrent helicities\n",
     "    cPECD_R_all =  np.divide(np.subtract(ctheta_RCR_all_norm,ctheta_RCL_all_norm),np.add(ctheta_RCR_all_norm,ctheta_RCL_all_norm))\n",
-    "    errPECD_R_all = fugi.error_calc(ctheta_RCR_all_norm,ctheta_RCL_all_norm,ctheta_RCR_err_all_norm,ctheta_RCL_err_all_norm) #normed error!\n",
+    "    errPECD_R_all = fugi.error_calc(ctheta_RCR_all,ctheta_RCL_all)\n",
     "\n",
     "    #ALL channels combined: polarization doesn´t make sense because of CH9 and CH11 three bodies\n",
-    "    mPECD_R_all = np.divide(np.subtract(MFPAD_RCR_all,MFPAD_RCL_all),np.add(MFPAD_RCR_all,MFPAD_RCL_all))\n",
+    "    mPECD_R_all = np.divide(np.subtract(MFPAD_RCR_all_norm,MFPAD_RCL_all_norm),np.add(MFPAD_RCR_all_norm,MFPAD_RCL_all_norm))\n",
     "\n",
     "    if fileSCL and fileSCR is not None:\n",
+    "        MFPAD_SCR_all,MFPAD_SCR_en_all,ctheta_SCR_all,ctheta_SCR_err_all=fugi.import_PECD3D(fileSCR, loc, a=a)\n",
+    "        MFPAD_SCL_all,MFPAD_SCL_en_all,ctheta_SCL_all,ctheta_SCL_err_all=fugi.import_PECD3D(fileSCL, loc, a=a)\n",
+    "\n",
+    "        #normalise before ANY PECD\n",
+    "        MFPAD_SCR_all_norm=fugi.normalise_with_err(MFPAD_SCR_all)\n",
+    "        MFPAD_SCL_all_norm=fugi.normalise_with_err(MFPAD_SCL_all)\n",
     "        ctheta_SCR_all_norm, ctheta_SCR_err_all_norm=fugi.normalise_with_err(ctheta_SCR_all,ctheta_SCR_err_all)\n",
     "        ctheta_SCL_all_norm, ctheta_SCL_err_all_norm=fugi.normalise_with_err(ctheta_SCL_all,ctheta_SCL_err_all)\n",
     "\n",
-    "        ctheta_S_all=np.add(ctheta_SCR_all_norm,np.flip(ctheta_SCL_all_norm))\n",
-    "        ctheta_S_all_err=np.sqrt(ctheta_SCR_err_all_norm**2+np.flip(ctheta_SCL_err_all_norm)**2) #SUM PROPAGATION\n",
-    "        # ctheta_S_all=np.add(ctheta_SCR_all_norm,ctheta_SCL_all_norm)\n",
-    "        # ctheta_S_all_err=np.sqrt(ctheta_SCR_err_all_norm**2+ctheta_SCL_err_all_norm**2) #SUM PROPAGATION\n",
+    "        ctheta_S_all=np.add(ctheta_SCR_all,np.flip(ctheta_SCL_all))\n",
+    "        ctheta_S_all_norm=np.add(ctheta_SCR_all_norm,np.flip(ctheta_SCL_all_norm))\n",
+    "        ctheta_S_all_err=fugi.error_calc(ctheta_SCR_err_all,np.flip(ctheta_SCL_err_all)) #SUM PROPAGATION\n",
     "\n",
     "        #single PECD on just S enantiomer\n",
     "        cPECD_S_all =  np.divide(np.subtract(ctheta_SCR_all_norm,ctheta_SCL_all_norm),np.add(ctheta_SCR_all_norm,ctheta_SCL_all_norm))\n",
-    "        errPECD_S_all = fugi.error_calc(ctheta_SCR_all,ctheta_SCL_all,ctheta_SCR_err_all,ctheta_SCL_err_all)\n",
+    "        errPECD_S_all = fugi.error_calc(ctheta_SCR_all,ctheta_SCL_all)\n",
     "    \n",
     "        #for 550eV total cos and PECD\n",
     "        ctheta_all=np.add(ctheta_R_all,np.flip(ctheta_S_all))\n",
-    "        ctheta_all_err=np.sqrt(ctheta_R_all_err**2+np.flip(ctheta_S_all_err)**2) #SUM PROPAGATION\n",
-    "        # ctheta_all=np.add(ctheta_R_all,ctheta_S_all)\n",
-    "        # ctheta_all_err=np.sqrt(ctheta_R_all_err**2+ctheta_S_all_err**2) #SUM PROPAGATION\n",
+    "        ctheta_all_err=fugi.error_calc(ctheta_R_all_err,np.flip(ctheta_S_all_err)) #SUM PROPAGATION\n",
     "\n",
-    "        cPECD_all =  np.divide(np.subtract(ctheta_R_all,ctheta_S_all),np.add(ctheta_R_all,ctheta_S_all))\n",
-    "        errPECD_all = fugi.error_calc(ctheta_R_all,ctheta_S_all,ctheta_R_all_err,ctheta_S_all_err)\n",
+    "        cPECD_all =  np.divide(np.subtract(ctheta_R_all_norm,ctheta_S_all_norm),np.add(ctheta_R_all_norm,ctheta_S_all_norm))\n",
+    "        errPECD_all = fugi.error_calc(ctheta_R_all,ctheta_S_all,ctheta_R_all_err)\n",
     "\n",
-    "        mPECD_S_all = np.divide(np.subtract(MFPAD_SCR_all,MFPAD_SCL_all),np.add(MFPAD_SCR_all,MFPAD_SCL_all))"
+    "        mPECD_S_all = np.divide(np.subtract(MFPAD_SCR_all_norm,MFPAD_SCL_all_norm),np.add(MFPAD_SCR_all_norm,MFPAD_SCL_all_norm))"
    ]
   },
   {
@@ -205,25 +196,22 @@
     "    ctheta_pol_RCL_norm, ctheta_pol_RCL_err_norm=fugi.normalise_with_err(ctheta_pol_RCL,ctheta_pol_RCL_err)\n",
     "    \n",
     "    #Combining the two polarizations: single intesity fit\n",
-    "    ctheta_R=np.add(ctheta_RCR_norm,np.flip(ctheta_RCL_norm))\n",
-    "    ctheta_R_err=np.sqrt(ctheta_RCR_err_norm**2+np.flip(ctheta_RCL_err_norm)**2) #normed error!\n",
-    "    # ctheta_R=np.add(ctheta_RCR_norm,ctheta_RCL_norm)\n",
-    "    # ctheta_R_err=np.sqrt(ctheta_RCR_err_norm**2+ctheta_RCL_err_norm**2) #normed error!\n",
-    "\n",
+    "    ctheta_R=np.add(ctheta_RCR,np.flip(ctheta_RCL))\n",
+    "    ctheta_R_norm=np.add(ctheta_RCR_norm,np.flip(ctheta_RCL_norm))\n",
+    "    ctheta_R_err=fugi.error_calc(ctheta_RCR_err,np.flip(ctheta_RCL_err))\n",
     "\n",
     "    #Combining the two polarizations: single intesity fit POL PLANE\n",
-    "    ctheta_R_pol=np.add(ctheta_pol_RCR_norm,np.flip(ctheta_pol_RCL_norm))\n",
-    "    ctheta_R_pol_err=np.sqrt(ctheta_pol_RCR_err_norm**2+np.flip(ctheta_pol_RCL_err_norm)**2) #normed error!\n",
-    "    # ctheta_R_pol=np.add(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm)\n",
-    "    # ctheta_R_pol_err=np.sqrt(ctheta_pol_RCR_err_norm**2+ctheta_pol_RCL_err_norm**2) #normed error!\n",
+    "    ctheta_R_pol=np.add(ctheta_pol_RCR,np.flip(ctheta_pol_RCL))\n",
+    "    ctheta_R_pol_norm=np.add(ctheta_pol_RCR_norm,np.flip(ctheta_pol_RCL_norm))\n",
+    "    ctheta_R_pol_err= fugi.error_calc(ctheta_pol_RCR_err,np.flip(ctheta_pol_RCL_err))\n",
     "\n",
     "    #PECD between two diffrent helicities\n",
     "    cPECD_R =  np.divide(np.subtract(ctheta_RCR_norm,ctheta_RCL_norm),np.add(ctheta_RCR_norm,ctheta_RCL_norm))\n",
-    "    errPECD_R = fugi.error_calc(ctheta_RCR_norm,ctheta_RCL_norm,ctheta_RCR_err_norm,ctheta_RCL_err_norm) #normed error!\n",
+    "    errPECD_R = fugi.error_calc(ctheta_RCR,ctheta_RCL)\n",
     "\n",
     "    #PECD between two diffrent helicities POL PLANE\n",
     "    cPECD_R_pol =  np.divide(np.subtract(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm),np.add(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm))\n",
-    "    errPECD_R_pol = fugi.error_calc(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm,ctheta_pol_RCR_err_norm,ctheta_pol_RCL_err_norm) #normed error!\n",
+    "    errPECD_R_pol = fugi.error_calc(ctheta_pol_RCR,ctheta_pol_RCL)\n",
     "\n",
     "    #ALL channels combined: polarization doesn´t make sense because of CH9 and CH11 three bodies\n",
     "    mPECD_R = np.divide(np.subtract(MFPAD_RCR,MFPAD_RCL),np.add(MFPAD_RCR,MFPAD_RCL))\n",
@@ -235,41 +223,35 @@
     "        ctheta_pol_SCL_norm, ctheta_pol_SCL_err_norm=fugi.normalise_with_err(ctheta_pol_SCL,ctheta_pol_SCL_err)\n",
     "\n",
     "        ctheta_S=np.add(ctheta_SCR_norm,np.flip(ctheta_SCL_norm))\n",
-    "        ctheta_S_err=np.sqrt(ctheta_SCR_err_norm**2+np.flip(ctheta_SCL_err_norm)**2) #normed error!\n",
-    "        # ctheta_S=np.add(ctheta_SCR_norm,ctheta_SCL_norm)\n",
-    "        # ctheta_S_err=np.sqrt(ctheta_SCR_err_norm**2+ctheta_SCL_err_norm**2) #normed error!\n",
+    "        ctheta_S_norm=np.add(ctheta_SCR_norm,np.flip(ctheta_SCL_norm))\n",
+    "        ctheta_S_err=fugi.error_calc(ctheta_SCR_err,np.flip(ctheta_SCL_err))\n",
     "\n",
     "        #for 550eV total cos and PECD two enantiomers POL PLANE\n",
-    "        ctheta_S_pol=np.add(ctheta_pol_SCR_norm,np.flip(ctheta_pol_SCL_norm))\n",
-    "        ctheta_S_pol_err=np.sqrt(ctheta_pol_SCR_err_norm**2+np.flip(ctheta_pol_SCL_err_norm)**2) #SUM PROPAGATION\n",
-    "        # ctheta_S_pol=np.add(ctheta_pol_SCR_norm,ctheta_pol_SCL_norm)\n",
-    "        # ctheta_S_pol_err=np.sqrt(ctheta_pol_SCR_err_norm**2+ctheta_pol_SCL_err_norm**2) #SUM PROPAGATION\n",
+    "        ctheta_S_pol=np.add(ctheta_pol_SCR,np.flip(ctheta_pol_SCL))\n",
+    "        ctheta_S_pol_norm=np.add(ctheta_pol_SCR_norm,np.flip(ctheta_pol_SCL_norm))\n",
+    "        ctheta_S_pol_err=fugi.error_calc(ctheta_pol_SCR_err,np.flip(ctheta_pol_SCL_err)) #SUM PROPAGATION\n",
     "\n",
-    "        cPECD_S =  np.divide(np.subtract(ctheta_SCR_norm,ctheta_SCL_norm),np.add(ctheta_SCR_norm,ctheta_SCL_norm))\n",
-    "        errPECD_S = fugi.error_calc(ctheta_SCR,ctheta_SCL,ctheta_SCR_err,ctheta_SCL_err)\n",
+    "        cPECD_S=np.divide(np.subtract(ctheta_SCR_norm,ctheta_SCL_norm),np.add(ctheta_SCR_norm,ctheta_SCL_norm))\n",
+    "        errPECD_S=fugi.error_calc(ctheta_SCR,ctheta_SCL)\n",
     "\n",
-    "        cPECD_S_pol =  np.divide(np.subtract(ctheta_pol_SCR_norm,ctheta_pol_SCL_norm),np.add(ctheta_pol_SCR_norm,ctheta_pol_SCL_norm))\n",
-    "        errPECD_S_pol = fugi.error_calc(ctheta_pol_SCR,ctheta_pol_SCL,ctheta_pol_SCR_err,ctheta_pol_SCL_err)\n",
+    "        cPECD_S_pol=np.divide(np.subtract(ctheta_pol_SCR_norm,ctheta_pol_SCL_norm),np.add(ctheta_pol_SCR_norm,ctheta_pol_SCL_norm))\n",
+    "        errPECD_S_pol=fugi.error_calc(ctheta_pol_SCR,ctheta_pol_SCL)\n",
     "\n",
     "        #for 550eV total cos and PECD two enantiomers\n",
-    "        ctheta=np.add(ctheta_R,np.flip(ctheta_S))\n",
-    "        ctheta_err=np.sqrt(ctheta_R_err**2+np.flip(ctheta_S_err)**2) #SUM PROPAGATION\n",
-    "        # ctheta=np.add(ctheta_R,ctheta_S)\n",
-    "        # ctheta_err=np.sqrt(ctheta_R_err**2+ctheta_S_err**2) #SUM PROPAGATION\n",
+    "        ctheta=np.add(ctheta_R_norm,np.flip(ctheta_S_norm))\n",
+    "        ctheta_err=fugi.error_calc(ctheta_R_err,np.flip(ctheta_S_err)) #SUM PROPAGATION\n",
     "\n",
     "        #for 550eV total cos and PECD two enantiomers\n",
     "        ctheta_pol=np.add(ctheta_R_pol,np.flip(ctheta_S_pol))\n",
-    "        ctheta_pol_err=np.sqrt(ctheta_R_pol_err**2+np.flip(ctheta_S_pol_err)**2) #SUM PROPAGATION\n",
-    "        # ctheta_pol=np.add(ctheta_R_pol,ctheta_S_pol)\n",
-    "        # ctheta_pol_err=np.sqrt(ctheta_R_pol_err**2+ctheta_S_pol_err**2) #SUM PROPAGATION\n",
+    "        ctheta_pol_err=fugi.error_calc(ctheta_R_pol_err,np.flip(ctheta_S_pol_err)) #SUM PROPAGATION\n",
     "\n",
-    "        cPECD =  np.divide(np.subtract(ctheta_R,ctheta_S),np.add(ctheta_R,ctheta_S))\n",
-    "        errPECD = fugi.error_calc(ctheta_R,ctheta_S,ctheta_R_err,ctheta_S_err)\n",
-    "        \n",
-    "        cPECD_pol =  np.divide(np.subtract(ctheta_R_pol,ctheta_S_pol),np.add(ctheta_R_pol,ctheta_S_pol))\n",
-    "        errPECD_pol = fugi.error_calc(ctheta_R_pol,ctheta_S_pol,ctheta_R_pol_err,ctheta_S_pol_err)\n",
-    "        \n",
     "\n",
+    "        cPECD =  np.divide(np.subtract(ctheta_R_norm,ctheta_S_norm),np.add(ctheta_R_norm,ctheta_S_norm))\n",
+    "        errPECD = fugi.error_calc(ctheta_R,ctheta_S,ctheta_R_err,ctheta_S_err, error_type=\"PECD\")\n",
+    "        \n",
+    "        cPECD_pol =  np.divide(np.subtract(ctheta_R_pol_norm,ctheta_S_pol_norm),np.add(ctheta_R_pol_norm,ctheta_S_pol_norm))\n",
+    "        errPECD_pol = fugi.error_calc(ctheta_R_pol,ctheta_S_pol,ctheta_R_pol,ctheta_S_pol,error_type=\"PECD\")\n",
+    "        \n",
     "        mPECD_S = np.divide(np.subtract(MFPAD_SCR,MFPAD_SCL),np.add(MFPAD_SCR,MFPAD_SCL))"
    ]
   },
@@ -300,11 +282,11 @@
     "m1=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit_cos(x_data,y_data,y_err,m1,ax1,custom_xlim)\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    ax1.set_title(\"Intensity c(theta) S CL \"+CH+\" \"+en)\n",
+    "    ax1.set_title(\"S CL \"+CH+\" \"+en)\n",
     "else:\n",
-    "    ax1.set_title(\"Intensity c(theta) R CL \"+CH+\" \"+en)\n",
-    "ax1.set_xlabel('cos(theta) [adm]')\n",
-    "ax1.set_ylabel('normalised counts')\n",
+    "    ax1.set_title(\"R CL \"+CH+\" \"+en)\n",
+    "ax1.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax1.set_ylabel('counts')\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m1.parameters, m1.values, m1.errors):\n",
@@ -316,7 +298,7 @@
     "# ax1.set_aspect(aspect)\n",
     "\n",
     "\n",
-    "print(\"CL fitting and covarience \\n\", m1, \"\\n\")\n",
+    "print(\"CR fitting and covarience \\n\", m1, \"\\n\")\n",
     "\n",
     "if CH == \"ALL_CH\":\n",
     "    x_data = ctheta_axis_red;y_data = ctheta_RCR_all;y_err = ctheta_RCR_err_all\n",
@@ -330,11 +312,11 @@
     "m2=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit_cos(x_data,y_data,y_err,m2,ax2,custom_xlim)\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    ax2.set_title(\"Intensity c(theta) S CR \"+CH+\" \"+en)\n",
+    "    ax2.set_title(\"S CR \"+CH+\" \"+en)\n",
     "else:\n",
-    "    ax2.set_title(\"Intensity c(theta) R CR \"+CH+\" \"+en)\n",
-    "ax2.set_xlabel('cos(theta) [adm]')\n",
-    "ax2.set_ylabel('normalised counts')\n",
+    "    ax2.set_title(\"R CR \"+CH+\" \"+en)\n",
+    "ax2.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax2.set_ylabel('counts')\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m2.parameters, m2.values, m2.errors):\n",
@@ -379,9 +361,16 @@
     "\n",
     "m=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit_cos(x_data,y_data,y_err,m,ax,custom_xlim)\n",
-    "ax.set_title(\"Intensity c(theta) combi \"+CH+\" \"+en)\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
-    "ax.set_ylabel('normalised counts')\n",
+    "if fileSCL and fileSCR is not None:\n",
+    "    if CH == \"ALL_CH\":\n",
+    "        ax.set_title(\"R + S \"+CH+\" \"+en)\n",
+    "    else:\n",
+    "        ax.set_title(\"S CL+CR \"+CH+\" \"+en)\n",
+    "else:\n",
+    "    ax.set_title(\"R CL+CR \"+CH+\" \"+en)\n",
+    "\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('counts')\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
@@ -403,7 +392,7 @@
    "outputs": [],
    "source": [
     "#PECD INTERPOLATION RANDOM\n",
-    "import functions_minuit as fumi\n",
+    "# import functions_minuit as fumi\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "custom_xlim = (-1, 1)\n",
@@ -426,9 +415,16 @@
     "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
-    "ax.set_title(\"PECD random \"+CH+\" \"+en)\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
-    "ax.set_ylabel('PECD %')\n",
+    "if fileSCL and fileSCR is not None:\n",
+    "    if CH == \"ALL_CH\":\n",
+    "        ax.set_title(\"R + S all dir \"+CH+\" \"+en)\n",
+    "    else:\n",
+    "        ax.set_title(\"S CL+CR all dir \"+CH+\" \"+en)\n",
+    "else:\n",
+    "    ax.set_title(\"R CL+CR all dir \"+CH+\" \"+en)\n",
+    "\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_ylabel('PECD')\n",
     "\n",
     "fit_info = []\n",
     "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
@@ -452,7 +448,7 @@
    "source": [
     "if CH == \"CH14\":\n",
     "    #PECD INTERPOLATION POL\n",
-    "    import functions_minuit as fumi\n",
+    "    # import functions_minuit as fumi\n",
     "\n",
     "    fig,ax= plt.subplots()\n",
     "\n",
@@ -469,9 +465,17 @@
     "\n",
     "    m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
     "    fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
-    "    ax.set_title(\"PECD pol \"+CH+\" \"+en)\n",
-    "    ax.set_xlabel('cos(theta) [adm]')\n",
-    "    ax.set_ylabel('PECD %')\n",
+    "\n",
+    "    if fileSCL and fileSCR is not None:\n",
+    "    if CH == \"ALL_CH\":\n",
+    "        ax.set_title(\"R + S pol \"+CH+\" \"+en)\n",
+    "    else:\n",
+    "        ax.set_title(\"S CL+CR pol \"+CH+\" \"+en)\n",
+    "    else:\n",
+    "        ax.set_title(\"R CL+CR pol \"+CH+\" \"+en)\n",
+    "\n",
+    "    ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "    ax.set_ylabel('PECD')\n",
     "\n",
     "    fit_info = []\n",
     "    for p, v, e in zip(m.parameters, m.values, m.errors):\n",
@@ -543,9 +547,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
    "codemirror_mode": {
@@ -557,7 +560,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.8"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
   }
  },
  "nbformat": 4,
